fix employee search page not passing search query to employee_edit page so it could be passeed back by Back button to return to employees search results instead of all employees list

--- a/app/templates/employee_edit.html
+++ b/app/templates/employee_edit.html
@@ -80,7 +80,7 @@
                     <button type="submit" class="btn btn-success">Save Changes</button>
                   </div>
                 <div class="col">
-                  <a href="/employees" class="btn btn-secondary">Back</a>
+                  <a href="/query_employees?query={{ query }}" class="btn btn-secondary">Back</a>
                 </div>
             </div>
         </div>
