--- a/app/templates/employees.html
+++ b/app/templates/employees.html
@@ -32,13 +32,10 @@
   </header>
 
     <div class="container searchbar mb-4">
-        <div class="d-flex col">
-            <a href="/create_employee" class="btn btn-secondary mt-5" type="button">Create New</a>
-        </div>
-        <form class="d-flex col mb-2 mt-5" role="search" method="POST" action="/query_employees">
-          <input type="search" name="search" class="form-control me-2" placeholder="Search..." aria-label="Search">
-          <button type="submit" class="btn btn-success text-dark col-lg-4 col-12">Search</button>
-        </form>
+      <form class="container d-flex col-10 mb-2 mt-5" role="search" method="POST" action="/query_employees">
+        <input type="search" name="search" class="form-control me-2" placeholder="Search..." aria-label="Search">
+        <button type="submit" class="btn btn-success text-dark col-lg-4 col-12">Search</button>
+      </form>
     </div>
 
     {% if message %}
@@ -46,40 +43,44 @@
     {% else %}
     <p class="container">Results found: {{results_count}}</p>
     {% endif %}
-
+    
     {% if results is not none %}
     <div class="results-table">
-        <table>
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>Phone</th>
-                    <th>Email</th>
-                    <th>Admin</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for row in results %}
-                <tr>
-                    <td>{{ row['id'] }}</td>
-                    <td>{{ row['first_name'] }}</td>
-                    <td>{{ row['last_name']}}</td>
-                    <td>{{ row['phone']}}</td>
-                    <td>{{ row['email']}}</td>
-                    <td>{{ row['admin']}}</td>
-                    <!-- <td><a href="/customer/{{ row['id'] }}"><button class="btn btn-primary" type="button" method="POST" action="/customer">Edit</button></a></td> -->
-                    <td><a href="/employee_edit/{{ row['id'] }}?search_query={{ search_query }}">
-                      <button class="btn btn-primary" type="button">Edit</button>
-                    </a></td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+      <table>
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Phone</th>
+            <th>Email</th>
+            <th>Admin</th>
+          </tr>
+        </thead>
+        <tbody>
+            {% for row in results %}
+            <tr>
+              <td>{{ row['id'] }}</td>
+              <td>{{ row['first_name'] }}</td>
+              <td>{{ row['last_name']}}</td>
+              <td>{{ row['phone']}}</td>
+              <td>{{ row['email']}}</td>
+              <td>{{ row['admin']}}</td>
+              <!-- <td><a href="/customer/{{ row['id'] }}"><button class="btn btn-primary" type="button" method="POST" action="/customer">Edit</button></a></td> -->
+              <td><a href="/employee_edit/{{ row['id'] }}?query={{ query }}">
+                <button class="btn btn-primary" type="button">Edit</button>
+              </a></td>
+            </tr>
+            {% endfor %}
+        </tbody>
+      </table>
     </div>
-    {% endif %}
+          {% endif %}
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-</body>
+    <div class="d-flex justify-content-center align-content-center">
+        <a href="/create_employee" class="btn btn-outline-success mt-5" type="button">Create New</a>
+    </div>
+          
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+        </body>
 </html>
