--- a/app/templates/employee_edit.html
+++ b/app/templates/employee_edit.html
@@ -31,7 +31,8 @@
   </header>
 
   <form action="/update_employee" method="POST">
-      <input type="hidden" name="id" value="{{ result['id'] }}">
+      <input type="hidden" name="employee_id" value="{{ result['id'] }}">
+      <input type="hidden" name="search" value="{{ query }}">
       <div class="container">
           <div class="row mb-3 text-center mt-5">
               <div class="col-4 themed-grid-col"><p>First Name: </p></div>                
@@ -46,6 +47,24 @@
               <div class="col-4 themed-grid-col"><p>Last Name: </p></div>                
               <div class="col-4 themed-grid-col">            
                   <input class="form-control" type="text" name="last_name" value="{{ result['last_name'] }}" >                 
+              </div>
+          </div>
+      </div>
+      
+      <div class="container">
+          <div class="row mb-3 text-center mt-5">
+              <div class="col-4 themed-grid-col"><p>Email: </p></div>                
+              <div class="col-4 themed-grid-col">            
+                  <input class="form-control" type="email" name="email" value="{{ result['email'] }}" >                 
+              </div>
+          </div>
+      </div>
+
+      <div class="container">
+          <div class="row mb-3 text-center mt-5">
+              <div class="col-4 themed-grid-col"><p>Phone: </p></div>                
+              <div class="col-4 themed-grid-col">            
+                  <input class="form-control" type="text" name="phone" value="{{ result['phone'] }}" >                 
               </div>
           </div>
       </div>
@@ -71,21 +90,71 @@
           </div>
       </div>
 
-      <div class="container text-center">
-          <div class="row">
-              <div class="col">
-                <button type="button" class="btn btn-danger">Delete User</button>
-              </div>
-              <div class="col">
-                  <button type="submit" class="btn btn-success">Save Changes</button>
-                </div>
-              <div class="col">
-                <a href="/query_employees?query={{ query }}" class="btn btn-secondary">Back</a>
-              </div>
-          </div>
-      </div>
-  </form>
+      <div class="row mt-5">
+        <div class="col-md-6 text-center">
+            <button type="submit" class="btn btn-success">Save Changes</button>
+        </div>
 
+        <div class="col-md-6 text-center">
+            <a href="/query_employees?query={{ query }}" class="btn btn-secondary">Back</a>
+        </div>
+    </div>
+</form>
+
+<form action="/delete_employee/{{ result['id'] }}" method="POST" id="delete_form">
+    <input type="hidden" name="query" value="{{ query }}">
+    <div class="row mb-5">
+        <div class="col-md-12 text-center">
+            <button type="button" class="btn btn-danger" id="delete_button">Delete User</button>
+        </div>
+    </div>
+</form>
+
+<!-- Bootstrap modal for confirmation -->
+<div class="modal fade" id="confirmationModal" tabindex="-1" aria-labelledby="confirmationModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="confirmationModalLabel">Confirm Deletion</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this user?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" id="confirmDeleteButton">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
+        
+        <p class="container">{{message}}</p>
+
+
+
+
+  <script>
+      // Get a reference to the delete button outside the modal
+      const deleteButton = document.getElementById('delete_button');
+
+      // Add a click event listener to the delete button outside the modal
+      deleteButton.addEventListener('click', function() {
+          // Show the confirmation modal using JavaScript
+          $('#confirmationModal').modal('show');
+      });
+
+      // Get a reference to the confirm delete button in the modal
+      const confirmDeleteButton = document.getElementById('confirmDeleteButton');
+
+      // Add a click event listener to the confirm delete button in the modal
+      confirmDeleteButton.addEventListener('click', function() {
+          // Submit the delete form
+          document.getElementById('delete_form').submit();
+      });
+  </script>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
