--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,11 +1,11 @@
-
 .results-table {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-td, th {
+td,
+th {
     padding-left: 8px;
     padding-right: 8px;
 }
