--- a/app/templates/create_employee.html
+++ b/app/templates/create_employee.html
@@ -1,118 +1,135 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customer Edit</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+        integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/style.css">
 
 </head>
 
 <body>
-  <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-    <div class="col-md-3 mb-2 mb-md-0">
-      <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-        <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
-      </a>
-    </div>
+    <header
+        class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+        <div class="col-md-3 mb-2 mb-md-0">
+            <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
+                <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap">
+                    <use xlink:href="#bootstrap"></use>
+                </svg>
+            </a>
+        </div>
 
-    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-      <li><a href="/admin" class="nav-link px-2 link-secondary">Home</a></li>
-      <li><a href="/employees" class="nav-link px-2">Employees</a></li>
-      <li><a href="#" class="nav-link px-2">Orders</a></li>
-      <li><a href="#" class="nav-link px-2">Products</a></li>
-      <li><a href="/customers" class="nav-link px-2">Customers</a></li>
-    </ul>
+        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+            <li><a href="/admin" class="nav-link px-2 link-secondary">Home</a></li>
+            <li><a href="/employees" class="nav-link px-2">Employees</a></li>
+            <li><a href="#" class="nav-link px-2">Orders</a></li>
+            <li><a href="#" class="nav-link px-2">Products</a></li>
+            <li><a href="/customers" class="nav-link px-2">Customers</a></li>
+        </ul>
 
-    <div class="col-md-3 text-end">
-      <a href="/"><button type="button" class="btn btn-primary me-3">Log Out</button></a>
-    </div>
-  </header>
+        <div class="col-md-3 text-end">
+            <a href="/"><button type="button" class="btn btn-primary me-3">Log Out</button></a>
+        </div>
+    </header>
 
     <form action="/create_employee" method="POST">
         <input type="hidden" name="id" value="">
         <div class="container">
             <div class="row mb-3 text-center mt-5">
-                <div class="col-4 themed-grid-col"><p>First Name: </p></div>                
                 <div class="col-4 themed-grid-col">
-                    <input class="form-control" type="text" name="first_name" value="" >                
+                    <p>First Name: </p>
+                </div>
+                <div class="col-4 themed-grid-col">
+                    <input class="form-control" type="text" name="first_name" value="">
                 </div>
             </div>
         </div>
 
         <div class="container">
             <div class="row mb-3 text-center mt-5">
-                <div class="col-4 themed-grid-col"><p>Last Name: </p></div>                
-                <div class="col-4 themed-grid-col">            
-                    <input class="form-control" type="text" name="last_name" value="" >                 
+                <div class="col-4 themed-grid-col">
+                    <p>Last Name: </p>
+                </div>
+                <div class="col-4 themed-grid-col">
+                    <input class="form-control" type="text" name="last_name" value="">
                 </div>
             </div>
         </div>
 
         <div class="container">
             <div class="row mb-3 text-center mt-5">
-                <div class="col-4 themed-grid-col"><p>Email: </p></div>                
-                <div class="col-4 themed-grid-col">            
-                    <input class="form-control" type="email" name="email" value="" >                 
+                <div class="col-4 themed-grid-col">
+                    <p>Email: </p>
+                </div>
+                <div class="col-4 themed-grid-col">
+                    <input class="form-control" type="email" name="email" value="">
                 </div>
             </div>
         </div>
 
         <div class="container">
             <div class="row mb-3 text-center mt-5">
-                <div class="col-4 themed-grid-col"><p>Phone: </p></div>                
-                <div class="col-4 themed-grid-col">            
-                    <input class="form-control" type="text" name="phone" value="" >                 
+                <div class="col-4 themed-grid-col">
+                    <p>Phone: </p>
+                </div>
+                <div class="col-4 themed-grid-col">
+                    <input class="form-control" type="text" name="phone" value="">
                 </div>
             </div>
         </div>
 
         <div class="container">
             <div class="row mb-3 text-center mt-5">
-                <div class="col-4 themed-grid-col"><p>Password: </p></div>                
-                <div class="col-4 themed-grid-col">                   
-                    <input class="form-control" type="text" name="password" value="" >                  
+                <div class="col-4 themed-grid-col">
+                    <p>Password: </p>
+                </div>
+                <div class="col-4 themed-grid-col">
+                    <input class="form-control" type="text" name="password" value="">
                 </div>
             </div>
         </div>
 
         <div class="container">
-            <div class="row mb-3 text-center mt-5">              
-                    <div class="col-4 themed-grid-col"><label for="boolDropdown">Is Admin:</label></div>
-                    <div class="col-4 themed-grid-col">
-                        <select type="boolDropdown" class="form-control" name="admin" id="boolDropdown">
-                          <option value="False" class="container">False</option>
-                          <option value="True"  class="container">True</option>
-                        </select>
-                    </div>
+            <div class="row mb-3 text-center mt-5">
+                <div class="col-4 themed-grid-col"><label for="boolDropdown">Is Admin:</label></div>
+                <div class="col-4 themed-grid-col">
+                    <select type="boolDropdown" class="form-control" name="admin" id="boolDropdown">
+                        <option value="False" class="container">False</option>
+                        <option value="True" class="container">True</option>
+                    </select>
+                </div>
             </div>
         </div>
 
         <div class="container text-center">
             <div class="row">
                 <div class="col">
-                  <a href="/create_employee" type="button" class="btn btn-danger">Clear</a>
+                    <a href="/create_employee" type="button" class="btn btn-danger">Clear</a>
                 </div>
                 <div class="col">
                     <button type="submit" class="btn btn-success">Save Changes</button>
-                  </div>
+                </div>
                 <div class="col">
-                  <a href="/employees" class="btn btn-secondary">Back</a>
+                    <a href="/employees" class="btn btn-secondary">Back</a>
                 </div>
             </div>
         </div>
     </form>
 
 
-    
- 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
