--- a/app/templates/customers.html
+++ b/app/templates/customers.html
@@ -8,14 +8,17 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
   <link rel="stylesheet" href="../static/css/style.css">
-   
+
 </head>
 
 <body>
-  <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+  <header
+    class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
     <div class="col-md-3 mb-2 mb-md-0">
       <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-        <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
+        <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap">
+          <use xlink:href="#bootstrap"></use>
+        </svg>
       </a>
     </div>
 
@@ -32,53 +35,57 @@
     </div>
   </header>
 
-    <div class="container searchbar mb-6">
-        <form class="d-flex col-12 col-lg-2 mb-2 mt-5" role="search" method="POST" action="/query_customers">
-          <input type="search" name="search" class="form-control me-2" placeholder="Search..." aria-label="Search" value="{{query}}">
-          <button type="submit" class="btn btn-success text-dark col-lg-4 col-12">Search</button>
-        </form>
-    </div>
+  <div class="container searchbar mb-6">
+    <form class="d-flex col-12 col-lg-2 mb-2 mt-5" role="search" method="POST" action="/query_customers">
+      <input type="search" name="search" class="form-control me-2" placeholder="Search..." aria-label="Search"
+        value="{{query}}">
+      <button type="submit" class="btn btn-success text-dark col-lg-4 col-12">Search</button>
+    </form>
+  </div>
 
-    {% if message %}
-    <p class="container">{{ message }}</p>
-    {% else %}
-    <p class="container">Results found: {{results_count}}</p>
-    {% endif %}
+  {% if message %}
+  <p class="container">{{ message }}</p>
+  {% else %}
+  <p class="container">Results found: {{results_count}}</p>
+  {% endif %}
 
-    {% if results is not none %}
-    <div class="results-table">
-        <table>
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Name</th>
-                    <th>Last Name</th>
-                    <th>Email</th>
-                    <th>Phone</th>
-                    <th>City</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for row in results %}
-                <tr>
-                    <td>{{ row['id'] }}</td>
-                    <td>{{ row['first_name'] }}</td>
-                    <td>{{ row['last_name']}}</td>
-                    <td>{{ row['email'] }}</td>
-                    <td>{{ row['phone']}}</td>
-                    <td>{{ row['city']}}</td>
-                    <td><a href="/customer_edit/{{ row['id'] }}?query={{ query }}">
-                          <button class="btn btn-primary" type="button">Edit</button>
-                        </a>
-                    </td>                  
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-    {% endif %}
+  {% if results is not none %}
+  <div class="results-table">
+    <table>
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>Name</th>
+          <th>Last Name</th>
+          <th>Email</th>
+          <th>Phone</th>
+          <th>City</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for row in results %}
+        <tr>
+          <td>{{ row['id'] }}</td>
+          <td>{{ row['first_name'] }}</td>
+          <td>{{ row['last_name']}}</td>
+          <td>{{ row['email'] }}</td>
+          <td>{{ row['phone']}}</td>
+          <td>{{ row['city']}}</td>
+          <td><a href="/customer_edit/{{ row['id'] }}?query={{ query }}">
+              <button class="btn btn-primary" type="button">Edit</button>
+            </a>
+          </td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+  {% endif %}
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
