--- a/app/templates/employee_edit.html
+++ b/app/templates/employee_edit.html
@@ -1,163 +1,182 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customer Edit</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/css/style.css"> 
+        integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/css/style.css">
 </head>
 
 <body>
-  <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-    <div class="col-md-3 mb-2 mb-md-0">
-      <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-        <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
-      </a>
-    </div>
-
-    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-      <li><a href="/admin" class="nav-link px-2 link-secondary">Home</a></li>
-      <li><a href="/employees" class="nav-link px-2">Employees</a></li>
-      <li><a href="#" class="nav-link px-2">Orders</a></li>
-      <li><a href="#" class="nav-link px-2">Products</a></li>
-      <li><a href="/customers" class="nav-link px-2">Customers</a></li>
-    </ul>
-
-    <div class="col-md-3 text-end">
-      <a href="/"><button type="button" class="btn btn-primary me-3">Log Out</button></a>
-    </div>
-  </header>
-
-  <form action="/update_employee" method="POST">
-      <input type="hidden" name="employee_id" value="{{ result['id'] }}">
-      <input type="hidden" name="search" value="{{ query }}">
-      <div class="container">
-          <div class="row mb-3 text-center mt-5">
-              <div class="col-4 themed-grid-col"><p>First Name: </p></div>                
-              <div class="col-4 themed-grid-col">
-                  <input class="form-control" type="text" name="first_name" value="{{ result['first_name'] }}" >                
-              </div>
-          </div>
-      </div>
-
-      <div class="container">
-          <div class="row mb-3 text-center mt-5">
-              <div class="col-4 themed-grid-col"><p>Last Name: </p></div>                
-              <div class="col-4 themed-grid-col">            
-                  <input class="form-control" type="text" name="last_name" value="{{ result['last_name'] }}" >                 
-              </div>
-          </div>
-      </div>
-      
-      <div class="container">
-          <div class="row mb-3 text-center mt-5">
-              <div class="col-4 themed-grid-col"><p>Email: </p></div>                
-              <div class="col-4 themed-grid-col">            
-                  <input class="form-control" type="email" name="email" value="{{ result['email'] }}" >                 
-              </div>
-          </div>
-      </div>
-
-      <div class="container">
-          <div class="row mb-3 text-center mt-5">
-              <div class="col-4 themed-grid-col"><p>Phone: </p></div>                
-              <div class="col-4 themed-grid-col">            
-                  <input class="form-control" type="text" name="phone" value="{{ result['phone'] }}" >                 
-              </div>
-          </div>
-      </div>
-
-      <div class="container">
-          <div class="row mb-3 text-center mt-5">
-              <div class="col-4 themed-grid-col"><p>Password: </p></div>                
-              <div class="col-4 themed-grid-col">                   
-                  <input class="form-control" type="text" name="password" value="{{ result['password'] }}" >                  
-              </div>
-          </div>
-      </div>
-
-      <div class="container">
-          <div class="row mb-3 text-center mt-5">              
-                  <div class="col-4 themed-grid-col"><label for="boolDropdown">Is Admin:</label></div>
-                  <div class="col-4 themed-grid-col">
-                      <select type="boolDropdown"  class="form-control" name="admin" id="boolDropdown">
-                          <option value="True" {% if result.admin %}selected{% endif %} class="container">True</option>
-                          <option value="False" {% if not result.admin %}selected{% endif %} class="container">False</option>
-                      </select>
-                  </div>
-          </div>
-      </div>
-
-      <div class="row mt-5">
-        <div class="col-md-6 text-center">
-            <button type="submit" class="btn btn-success">Save Changes</button>
+    <header
+        class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+        <div class="col-md-3 mb-2 mb-md-0">
+            <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
+                <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap">
+                    <use xlink:href="#bootstrap"></use>
+                </svg>
+            </a>
         </div>
 
-        <div class="col-md-6 text-center">
-            <a href="/query_employees?query={{ query }}" class="btn btn-secondary">Back</a>
-        </div>
-    </div>
-</form>
+        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+            <li><a href="/admin" class="nav-link px-2 link-secondary">Home</a></li>
+            <li><a href="/employees" class="nav-link px-2">Employees</a></li>
+            <li><a href="#" class="nav-link px-2">Orders</a></li>
+            <li><a href="#" class="nav-link px-2">Products</a></li>
+            <li><a href="/customers" class="nav-link px-2">Customers</a></li>
+        </ul>
 
-<form action="/delete_employee/{{ result['id'] }}" method="POST" id="delete_form">
-    <input type="hidden" name="query" value="{{ query }}">
-    <div class="row mb-5">
-        <div class="col-md-12 text-center">
-            <button type="button" class="btn btn-danger" id="delete_button">Delete User</button>
+        <div class="col-md-3 text-end">
+            <a href="/"><button type="button" class="btn btn-primary me-3">Log Out</button></a>
         </div>
-    </div>
-</form>
+    </header>
 
-<!-- Bootstrap modal for confirmation -->
-<div class="modal fade" id="confirmationModal" tabindex="-1" aria-labelledby="confirmationModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="confirmationModalLabel">Confirm Deletion</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                Are you sure you want to delete this user?
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger" id="confirmDeleteButton">Delete</button>
+    <form action="/update_employee" method="POST">
+        <input type="hidden" name="employee_id" value="{{ result['id'] }}">
+        <input type="hidden" name="search" value="{{ query }}">
+        <div class="container">
+            <div class="row mb-3 text-center mt-5">
+                <div class="col-4 themed-grid-col">
+                    <p>First Name: </p>
+                </div>
+                <div class="col-4 themed-grid-col">
+                    <input class="form-control" type="text" name="first_name" value="{{ result['first_name'] }}">
+                </div>
             </div>
         </div>
+
+        <div class="container">
+            <div class="row mb-3 text-center mt-5">
+                <div class="col-4 themed-grid-col">
+                    <p>Last Name: </p>
+                </div>
+                <div class="col-4 themed-grid-col">
+                    <input class="form-control" type="text" name="last_name" value="{{ result['last_name'] }}">
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row mb-3 text-center mt-5">
+                <div class="col-4 themed-grid-col">
+                    <p>Email: </p>
+                </div>
+                <div class="col-4 themed-grid-col">
+                    <input class="form-control" type="email" name="email" value="{{ result['email'] }}">
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row mb-3 text-center mt-5">
+                <div class="col-4 themed-grid-col">
+                    <p>Phone: </p>
+                </div>
+                <div class="col-4 themed-grid-col">
+                    <input class="form-control" type="text" name="phone" value="{{ result['phone'] }}">
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row mb-3 text-center mt-5">
+                <div class="col-4 themed-grid-col">
+                    <p>Password: </p>
+                </div>
+                <div class="col-4 themed-grid-col">
+                    <input class="form-control" type="text" name="password" value="{{ result['password'] }}">
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row mb-3 text-center mt-5">
+                <div class="col-4 themed-grid-col"><label for="boolDropdown">Is Admin:</label></div>
+                <div class="col-4 themed-grid-col">
+                    <select type="boolDropdown" class="form-control" name="admin" id="boolDropdown">
+                        <option value="True" {% if result.admin %}selected{% endif %} class="container">True</option>
+                        <option value="False" {% if not result.admin %}selected{% endif %} class="container">False
+                        </option>
+                    </select>
+                </div>
+            </div>
+        </div>
+
+        <div class="row mt-5">
+            <div class="col-md-6 text-center">
+                <button type="submit" class="btn btn-success">Save Changes</button>
+            </div>
+
+            <div class="col-md-6 text-center">
+                <a href="/query_employees?query={{ query }}" class="btn btn-secondary">Back</a>
+            </div>
+        </div>
+    </form>
+
+    <form action="/delete_employee/{{ result['id'] }}" method="POST" id="delete_form">
+        <input type="hidden" name="query" value="{{ query }}">
+        <div class="row mb-5">
+            <div class="col-md-12 text-center">
+                <button type="button" class="btn btn-danger" id="delete_button">Delete User</button>
+            </div>
+        </div>
+    </form>
+
+    <!-- Bootstrap modal for confirmation -->
+    <div class="modal fade" id="confirmationModal" tabindex="-1" aria-labelledby="confirmationModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="confirmationModalLabel">Confirm Deletion</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to delete this user?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-danger" id="confirmDeleteButton">Delete</button>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
-        
-
-
-
-<p class="container">{{message}}</p>
 
 
 
 
-  <script>
-      // Get a reference to the delete button outside the modal
-      const deleteButton = document.getElementById('delete_button');
+    <p class="container">{{message}}</p>
 
-      // Add a click event listener to the delete button outside the modal
-      deleteButton.addEventListener('click', function() {
-          // Show the confirmation modal using JavaScript
-          $('#confirmationModal').modal('show');
-      });
 
-      // Get a reference to the confirm delete button in the modal
-      const confirmDeleteButton = document.getElementById('confirmDeleteButton');
 
-      // Add a click event listener to the confirm delete button in the modal
-      confirmDeleteButton.addEventListener('click', function() {
-          // Submit the delete form
-          document.getElementById('delete_form').submit();
-      });
-  </script>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script>
+        // Get a reference to the delete button outside the modal
+        const deleteButton = document.getElementById('delete_button');
+
+        // Add a click event listener to the delete button outside the modal
+        deleteButton.addEventListener('click', function () {
+            // Show the confirmation modal using JavaScript
+            $('#confirmationModal').modal('show');
+        });
+
+        // Get a reference to the confirm delete button in the modal
+        const confirmDeleteButton = document.getElementById('confirmDeleteButton');
+
+        // Add a click event listener to the confirm delete button in the modal
+        confirmDeleteButton.addEventListener('click', function () {
+            // Submit the delete form
+            document.getElementById('delete_form').submit();
+        });
+    </script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
