--- a/app/templates/employees.html
+++ b/app/templates/employees.html
@@ -11,10 +11,13 @@
 </head>
 
 <body>
-  <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+  <header
+    class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
     <div class="col-md-3 mb-2 mb-md-0">
       <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-        <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
+        <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap">
+          <use xlink:href="#bootstrap"></use>
+        </svg>
       </a>
     </div>
 
@@ -31,56 +34,59 @@
     </div>
   </header>
 
-    <div class="container searchbar mb-4">
-      <form class="container d-flex col-10 mb-2 mt-5" role="search" method="POST" action="/query_employees">
-        <input type="search" name="search" class="form-control me-2" placeholder="Search..." aria-label="Search">
-        <button type="submit" class="btn btn-success text-dark col-lg-4 col-12">Search</button>
-      </form>
-    </div>
+  <div class="container searchbar mb-4">
+    <form class="container d-flex col-10 mb-2 mt-5" role="search" method="POST" action="/query_employees">
+      <input type="search" name="search" class="form-control me-2" placeholder="Search..." aria-label="Search">
+      <button type="submit" class="btn btn-success text-dark col-lg-4 col-12">Search</button>
+    </form>
+  </div>
 
-    {% if message %}
-    <p class="container">{{ message }}</p>
-    {% else %}
-    <p class="container">Results found: {{results_count}}</p>
-    {% endif %}
-    
-    {% if results is not none %}
-    <div class="results-table">
-      <table>
-        <thead>
-          <tr>
-            <th>ID</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Phone</th>
-            <th>Email</th>
-            <th>Admin</th>
-          </tr>
-        </thead>
-        <tbody>
-            {% for row in results %}
-            <tr>
-              <td>{{ row['id'] }}</td>
-              <td>{{ row['first_name'] }}</td>
-              <td>{{ row['last_name']}}</td>
-              <td>{{ row['phone']}}</td>
-              <td>{{ row['email']}}</td>
-              <td>{{ row['admin']}}</td>
-              <!-- <td><a href="/customer/{{ row['id'] }}"><button class="btn btn-primary" type="button" method="POST" action="/customer">Edit</button></a></td> -->
-              <td><a href="/employee_edit/{{ row['id'] }}?query={{ query }}">
-                <button class="btn btn-primary" type="button">Edit</button>
-              </a></td>
-            </tr>
-            {% endfor %}
-        </tbody>
-      </table>
-    </div>
-          {% endif %}
+  {% if message %}
+  <p class="container">{{ message }}</p>
+  {% else %}
+  <p class="container">Results found: {{results_count}}</p>
+  {% endif %}
 
-    <div class="d-flex justify-content-center align-content-center">
-        <a href="/create_employee" class="btn btn-outline-success mt-5" type="button">Create New</a>
-    </div>
-          
-          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-        </body>
+  {% if results is not none %}
+  <div class="results-table">
+    <table>
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>Phone</th>
+          <th>Email</th>
+          <th>Admin</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for row in results %}
+        <tr>
+          <td>{{ row['id'] }}</td>
+          <td>{{ row['first_name'] }}</td>
+          <td>{{ row['last_name']}}</td>
+          <td>{{ row['phone']}}</td>
+          <td>{{ row['email']}}</td>
+          <td>{{ row['admin']}}</td>
+          <!-- <td><a href="/customer/{{ row['id'] }}"><button class="btn btn-primary" type="button" method="POST" action="/customer">Edit</button></a></td> -->
+          <td><a href="/employee_edit/{{ row['id'] }}?query={{ query }}">
+              <button class="btn btn-primary" type="button">Edit</button>
+            </a></td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+  {% endif %}
+
+  <div class="d-flex justify-content-center align-content-center">
+    <a href="/create_employee" class="btn btn-outline-success mt-5" type="button">Create New</a>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
