add auth microservice update all requirements.txt files, add redit service to docker-compose

--- a/app/templates/employee_edit.html
+++ b/app/templates/employee_edit.html
@@ -87,7 +87,7 @@
                     <p>Password: </p>
                 </div>
                 <div class="col-4 themed-grid-col">
-                    <input class="form-control" type="text" name="password" value="{{ result['password'] }}">
+                    <input class="form-control" type="text" name="password">
                 </div>
             </div>
         </div>
@@ -149,6 +149,7 @@
 
 
     <p class="container">{{message}}</p>
+    <p class="container">{{result['password']}}</p>
 
 
 
